<resources>
    <string name="app_name">DPHE Staff Contact</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="this_is_app_logo">This is app logo</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_to_icr_wallet">Sign in to ICR Wallet</string>
    <string name="full_name">Full Name</string>
    <string name="this_is_back_image_button">This is back image button</string>
    <string name="email_address">Email Address</string>
    <string name="this_is_user_profile_image">This is user profile image</string>
    <string name="this_is_profile_image_upload_camera_button">This is profile image upload camera button</string>
    <string name="confirm_password">Confirm password</string>
    <string name="tap_to_select_image">Tap to select Image</string>
    <string name="app_logo">App Logo</string>
    <string name="text_successful">Successful</string>
    <string name="profile_updated">Profile successfully updated.</string>
    <string name="sign_up_success_check_email">Sign up successful, please check email</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="password_reset_email">Email sent successfully, for reseting password</string>
    <string name="parse_production_url">http://parsestore-staging.wave.io/parse</string>
    <string name="parse_test_url">http://192.168.1.8:5100/parse</string>
    <string name="parse_development_url">https://icr_wallet.herokuapp.com/parse</string>
    <string name="please_enter_your_email_for_verification">Please enter your email for verification</string>
    <string name="email_verified_now_login">Email is verified, now you can login</string>
    <string name="email_not_verified">Email is not verified, try again</string>
    <string name="parse_app_id">icr_wallet</string>
    <string name="parse_client_key">g5EJm^^j$3D0MVLRVVlc@</string>
    <string name="parse_rest_api_key">IHqK@FkTun$EmRV*ts8E*</string>
    <string name="google_captcha_key">6LcL2WwUAAAAAI1unp1ZKBH9kpZk2XiaKl22xtUw</string>
    <string name="captcha_verification_fail">Captcha verification failed</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="empty_password">Password cannot be empty!</string>
    <string name="empty_email">Email cannot be empty!</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_doesnt_match">Passwords don\'t match</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="password_character_limit">Password must be between 6 to 20 characters.</string>
    <string name="username_character_limit">Username must be between 5 to 15 characters.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!--Validity-->
    <string name="username_is_invalid">Username is invalid</string>
    <string name="error_uploading_image">Error uploading image, try again!</string>
    <string name="crash_toast_text">App crash check email</string>
    <string name="home">HOME</string>
    <string name="my_addresses">MY ADDRESSES</string>
    <string name="transfer_amount">TRANSFER AMOUNT</string>
    <string name="transactions">TRANSACTIONS</string>
    <string name="log_out">LOG OUT</string>

    <string name="network_connection_disabled_title">There\'s no network connection.</string>
    <string name="network_connection_disabled_content">Please make sure you\'re connected to a WI-Fi or mobile network and try again.</string>
    <string name="network_connection_timeout_error">Timeout Error!!!</string>
    <string name="network_connection_timeout_error_msg">Connection TimeOut! Please check your internet connection.</string>
    <string name="network_connection_auth_error">Auth Failure Error!!!</string>
    <string name="network_connection_server_error">Server Error!!!</string>
    <string name="network_connection_server_error_msg">The server could not be found. Please try again after some time.</string>
    <string name="network_connection_parse_error">Parse Error!!!</string>
    <string name="network_connection_network_error">Network Error!!!</string>
    <string name="network_connection_unknown_error">Unknown Error!!!</string>

    <string name="title_success">Success!!!</string>
    <string name="title_not_success">Not Success!!!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">CANCEL</string>

    <string name="transactions_failed">Failed to fetch Transactions data.</string>
    <string name="transactions_empty">There is no Transactions data available.</string>
    <string name="balance_failed">Failed to fetch Balance data.</string>
    <string name="my_key_failed">Failed to fetch My Private Key data.</string>
    <string name="add_address_header">Create Label for New Address</string>
    <string name="edit_address_header">Edit Label for Existing Address</string>
    <string name="detail_address_header">My Address</string>
    <string name="Label">Label</string>
    <string name="my_key">MY PRIVATE KEY</string>
    <string name="update">UPDATE</string>
    <string name="submit">Submit</string>
    <string name="scan">Scan</string>
    <string name="amount">Amount</string>
    <string name="address">Address</string>
    <string name="laboratory">Laboratory</string>
    <string name="circle_district_office">Circle-District Office</string>
    <string name="project_office">Project Office</string>
    <string name="head_quarter">Head Quarter</string>
    <string name="contact">Contact</string>
    <string name="office">Office</string>
    <string name="telephone">Telephone</string>
    <string name="fax">Fax</string>
    <string name="email">Email</string>

    <string-array name="head_quarter">
        <item><![CDATA[CE & Addl. CE Office]]></item>
        <item>Planning Circle</item>
        <item>Ground Water Circle</item>
        <item>Store Circle</item>
        <item>Feasibility Study and Design Circle</item>
        <item>Dhaka Circle</item>
    </string-array>

    <string-array name="project_office">
        <item>Establishment of National HRD Centre of DPHE</item>
        <item>37 Districts Towns Water Supply Project</item>
        <item>Bangladesh Rural Water Supply and Sanitation Project</item>
        <item>Water Supply and Environmental Sanitation Project at Thana Sadar and Growth Centre Pourashava</item>
        <item>Water Supply and Environmental Sanitation Project at Mongla Pourashava</item>
        <item>Ground Water Investigation and Development of Deep Ground Water Source in Urban and Rural Areas in Bangladesh</item>
        <item>Water Supply,Sanitation and Hygiene Project(WASH)</item>
        <item><![CDATA[40 Pourashava & Growth Centre Water Supply and Environmental Sanitation Project (Phase-II)]]></item>
        <item>Project for Improvement of Comprehensive Management Capacity of DPHE on Water Supply</item>
        <item>Third Primary Education Development Program (PEDP-3)</item>
        <item>National Sanitation Project (Phase-III)</item>
        <item>Village Water Supply Project (VWSP)</item>
        <item>Village Water Supply Project (VWSP)</item>
        <item>Water Preservation and Safe Water Supply Project through RE-excavation / Maintenance of Ponds/Dighi/Ditches Owned by Zila Parishads</item>
        <item>Feasibility Study and Development Project Preparation for Water Supply Facilities for Coxs Bazar Town</item>
        <item>The Project for Safe Water Supply at Different Upazila of Bandarban District</item>
        <item>The Project for Improvement of Water Supply and Environmental Sanitation of Gopalgonj and Bagerhat Paurasova</item>
        <item>The Project for Safe Water Supply and Sanitation of Rural Areas of Rangamati District</item>
        <item>The Project for Safe Water Supply and Sanitation of Rural Areas of Different Upazilla of Khagrachhari District</item>
        <item>The Safe Water Supply and Sanitation Project in Lalmonirhat,Kurigram,Panchagarh and Nilphamari District giving special emphasize on the formar Enclave areas</item>
        <item>Third Urban Governance and Infrastructure Improvement (Sector) Project (UGIIP-III)</item>
        <item>Urban Water Supply and Sanitation in 23 Pourashavas Project in Bangladesh (GoB-IDB)</item>
        <item><![CDATA[Water Supply & Environmental Sanitation including Fecal sludge Management Project in 32 Pourashavas]]></item>
        <item>Preferential Rural Water Supply Project (PRWSP)</item>
        <item>Arsenic Risk Reduction Project for Water SupplyDhaka Circle</item>
    </string-array>

    <string-array name="circle_district_office">
        <item>Barisal Circle</item>
        <item>Chittagong Circle</item>
        <item>Chittagong Hill Tract Circle</item>
        <item>Dhaka Circle</item>
        <item>Faridpur Circle</item>
        <item>Khulna Circle</item>
        <item>Rajshahi Circle</item>
        <item>Rangpur Circle</item>
        <item>Sylhet Circle</item>
    </string-array>

    <string-array name="laboratory">
        <item><![CDATA[Water Quality Monitoring & Surveillance Circle (WQMSC) / Laboratory]]></item>
    </string-array>
</resources>
